--- a/09_final-project_smart-brain/practices/31_final-project_smart-brain/frontend/package.json
+++ b/09_final-project_smart-brain/practices/31_final-project_smart-brain/frontend/package.json
@@ -18,5 +18,8 @@
     "react-parallax-tilt": "^1.7.153",
     "react-tsparticles": "^2.11.0",
     "tsparticles": "^2.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.10.7"
   }
 }
